WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151616
Fix the !ENABLE(DFG_JIT) build after
r192699
https://bugs.webkit.org/show_bug.cgi?id=151616
Summary
Fix the !ENABLE(DFG_JIT) build after r192699
Csaba Osztrogonác
Reported
2015-11-26 04:15:45 PST
build error log: ----------------- ../../Source/JavaScriptCore/assembler/MacroAssembler.h: In member function 'void JSC::MacroAssembler::moveDoubleConditionallyTest32(JSC::MacroAssemblerX86Common::ResultCondition, TestType, MaskType, JSC::AbstractMacroAssembler<JSC::X86Assembler, JSC::MacroAssemblerX86Common>::FPRegisterID, JSC::AbstractMacroAssembler<JSC::X86Assembler, JSC::MacroAssemblerX86Common>::FPRegisterID)': ../../Source/JavaScriptCore/assembler/MacroAssembler.h:1323:30: error: there are no arguments to 'isInvertible' that depend on a template parameter, so a declaration of 'isInvertible' must be available [-fpermissive] ../../Source/JavaScriptCore/assembler/MacroAssembler.h:1323:30: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated) ../../Source/JavaScriptCore/assembler/MacroAssembler.h:1324:54: error: no matching function for call to 'JSC::MacroAssembler::invert(JSC::MacroAssemblerX86Common::ResultCondition&)' The problem is that isInvertible() is defined inside ENABLE(DFG_JIT) guards, but used without guard: -
http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/assembler/MacroAssembler.h?rev=192699#L175
-
http://trac.webkit.org/changeset/192699/trunk/Source/JavaScriptCore/assembler/MacroAssembler.h
But the new moveDoubleConditionally*() functions are used only in B3 JIT, let's guard them.
Attachments
Patch
(1.38 KB, patch)
2015-11-26 04:16 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-11-26 04:16:59 PST
Created
attachment 266176
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-30 22:58:57 PST
Comment on
attachment 266176
[details]
Patch Clearing flags on attachment: 266176 Committed
r192862
: <
http://trac.webkit.org/changeset/192862
>
WebKit Commit Bot
Comment 3
2015-11-30 22:59:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug