Fix the !ENABLE(DFG_JIT) build after r192699 https://bugs.webkit.org/show_bug.cgi?id=151616

Reviewed by Darin Adler.

* assembler/MacroAssembler.h:


Canonical link: https://commits.webkit.org/169819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192862 268f45cc-cd09-0410-ab3c-d52691b4dbfc